add remove animation, update animation "system"